--- a/dice.html
+++ b/dice.html
@@ -8,37 +8,32 @@
   </head>
   <body>
     <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="card" style="width:600px">
-          <h3></h3>
-          <img class="card-img-top" src="images/Player.png" alt="Card image">
-          <div class="card-body">
-            <h4 class="card-title">Player 1</h4>
-            <h4 class="card-text">Have fun in the game</h4>
-            <a href="" class="btn btn-success">Roll dice</a><br>
-            <a href="" class="btn btn-warning">Hold</a></br>
-
+      <div class="row">
+        <div class="col-md-6">
+          <div class="card" style="width:600px">
+            <img class="card-img-top" src="images/Player.png" alt="Card image">
+            <div class="card-body">
+              <h4 class="card-title">Player 1</h4>
+              <h4 class="card-text">Have fun in the game</h4>
+              <a href="" class="btn btn-success">Roll dice</a>
+              <br>
+              <a href="" class="btn btn-warning">Hold</a>
+            </br>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card" style="width:600px">
+            <img class="card-img-top" src="images/Player.png" alt="Card image">
+            <div class="card-body">
+              <h4 class="card-title">Player 2</h4>
+              <h4 class="card-text">Have fun in the game</h4>
+              <a href="" class="btn btn-success">Roll dice</a><br>
+              <a href="" class="btn btn-warning">Hold</a></br>
+            </div>
           </div>
         </div>
       </div>
-
-      <div class="col-md-6">
-        <div class="card" style="width:600px">
-          <h3></h3>
-          <img class="card-img-top" src="images/Player.png" alt="Card image">
-          <div class="card-body">
-            <h4 class="card-title">Player 2</h4>
-            <h4 class="card-text">Have fun in the game</h4>
-            <a href="" class="btn btn-success">Roll dice</a><br>
-            <a href="" class="btn btn-warning">Hold</a></br>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-
     </div>
   </body>
-</html>
+  </html>
