modified my directory

--- a/dice.html
+++ b/dice.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/dice.css" type="text/css">
+    <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
+          <script src="js/scripts.js"></script>
     <meta charset="utf-8">
     <title></title>
   </head>
@@ -15,10 +18,15 @@
             <div class="card-body">
               <h4 class="card-title">Player 1</h4>
               <h4 class="card-text">Have fun in the game</h4>
-              <a href="" class="btn btn-success">Roll dice</a>
+              <button type="button" id="roll-button1"><a href="" class="btn btn-success">Roll dice</button></a>
               <br>
-              <a href="" class="btn btn-warning">Hold</a>
-            </br>
+              <button type="button" id="hold-button1"><a href="" class="btn btn-warning">Hold</button></a>
+
+              </br>
+              <h2>Score for this Turn: <span id="turnScore" class="gameStatusDisplay turnScore"></span></h2>
+              <p><span id="rol-temp1"></span>Temporary Score:</p>
+              <p><span id="rol-final1"></span>Final score:</p>
+
             </div>
           </div>
         </div>
@@ -28,12 +36,18 @@
             <div class="card-body">
               <h4 class="card-title">Player 2</h4>
               <h4 class="card-text">Have fun in the game</h4>
-              <a href="" class="btn btn-success">Roll dice</a><br>
-              <a href="" class="btn btn-warning">Hold</a></br>
+                <button type="button" id="roll-button2"><a href="" class="btn btn-success">Roll dice</button></a>
+              <br>
+                <button type="button" id="hold-button2"><a href="" class="btn btn-warning">Hold</button></a>
+            </br>
+            <h2>Score for this Turn: <span id="turnScore" class="gameStatusDisplay turnScore"></span></h2>
+              <p><span id="rol-temp2"></span>Temporary Score:</p>
+              <p><span id="rol-final2"></span>Final score:</p>
             </div>
           </div>
         </div>
       </div>
+      <button type="button" id="start"><a href="" class="btn btn-success">Start</button></a>
     </div>
   </body>
   </html>
