--- a/dice.html
+++ b/dice.html
@@ -19,9 +19,9 @@
               <h4 class="card-title">Player 1</h4>
               <h4 class="card-text">Have fun in the game</h4>
 
-              <div id= "die1" class="dice"><p><span id="rol-temp1"></span>Temporary Score: 0</p></div>
+              <div id= "roll1" class="dice"><p><span id="rol-temp1"></span>Temporary Score: 0</p></div>
               <button type="button" onclick="rollDice()">Roll the dice</button>
-              <h2 id="status"></h2>
+              <h2 id="where"></h2>
             </div>
           </div>
         </div>
