--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           <label>player 2</label><br>
           <input type="player2" class="form-control" id="ply2" placeholder="Enter player 2" name="dr">
         </div>
-        
+
       </form>
-      <a href="dice.html"><button id="start" class="btn btn-warning">Play</button></a>
+      <a href="dice.html"><button  class="btn btn-warning">Play</button></a>
     </div>
   </body>
   </html>
