modified my README.md

--- a/dice.html
+++ b/dice.html
@@ -19,7 +19,7 @@
               <h4 class="card-title">Player 1</h4>
               <h4 class="card-text">Have fun in the game</h4>
 
-              <div id= "roll1" class="dice"><p><span id="rol-temp1"></span>Temporary Score: 0</p></div>
+              <div id= "roll1" class="dice"><p><span id="rol-temp1"></span>Final Score: 0</p></div>
               <button type="button" onclick="rollDice()">Roll the dice</button>
               <h2 id="where"></h2>
             </div>
